--- a/static-ui/styles.css
+++ b/static-ui/styles.css
@@ -70,3 +70,116 @@ body {
 footer {
 	background-color: #E9E9E9;
 }
+
+/**************
+*TABLE
+****************/
+td, th {
+	text-align: center;
+}
+
+/**************
+*CARD
+****************/
+#tuxCard {
+	border: 1px solid black;
+	background-color: #A5A18E;
+	border-radius: 50px;
+}
+
+/**************
+*BUTTON
+****************/
+input, button {
+	background-color: #0D111B;
+	color: #A5A18E;
+	border-radius: 10%;
+	border: solid 3px #A5A18E;
+	padding: .5em;
+}
+
+/**************
+*VERT NAV
+****************/
+@media (max-width: 768px) {
+	#sidebar {
+		margin-left: -250px;
+	}
+	#sidebar.active {
+		margin-left: 0;
+	}
+}
+
+.wrapper {
+	display: flex;
+	align-items: stretch;
+}
+
+#sidebar.active {
+	margin-left: -250px;
+}
+
+body {
+	font-family: 'Poppins', sans-serif;
+	background: #fafafa;
+}
+
+p {
+	font-family: 'Poppins', sans-serif;
+	font-size: 1.1em;
+	font-weight: 300;
+	line-height: 1.7em;
+	color: #999;
+}
+
+a, a:hover, a:focus {
+	color: inherit;
+	text-decoration: none;
+	transition: all 0.3s;
+}
+
+#sidebar {
+	/* don't forget to add all the previously mentioned styles here too */
+	min-width: 250px;
+	max-width: 250px;;
+	min-height: 100vh;
+	background: #7386D5;
+	color: #fff;
+	transition: all 0.3s;
+}
+
+#sidebar .sidebar-header {
+	padding: 20px;
+	background: #6d7fcc;
+}
+
+#sidebar ul.components {
+	padding: 20px 0;
+	border-bottom: 1px solid #47748b;
+}
+
+#sidebar ul p {
+	color: #fff;
+	padding: 10px;
+}
+
+#sidebar ul li a {
+	padding: 10px;
+	font-size: 1.1em;
+	display: block;
+}
+#sidebar ul li a:hover {
+	color: #7386D5;
+	background: #fff;
+}
+
+#sidebar ul li.active > a, a[aria-expanded="true"] {
+	color: #fff;
+	background: #6d7fcc;
+}
+ul ul a {
+	font-size: 0.9em !important;
+	padding-left: 30px !important;
+	background: #6d7fcc;
+}
+
