--- a/public_html/templates/home.html
+++ b/public_html/templates/home.html
@@ -1,8 +1,10 @@
 <!-- Selectors -->
 <navigation-top></navigation-top>
+<create-wedding></create-wedding>
 <section>
 	<h1 class="mb-3">Weddings</h1>
-	<button class="m-4">Create Wedding</button>
+	<p>Welcome to Tux, to get started just select create wedding and add your groomsman contact information.</p>
+	<a href="#" data-toggle="modal" data-target="#createWedding">Create Wedding</a>
 	<table class="table justify-content-center table-striped table-bordered table-hover">
 		<tr>
 			<th>Number</th>
