--- a/public_html/templates/landing-page.html
+++ b/public_html/templates/landing-page.html
@@ -1,7 +1,7 @@
-	<!-- Selectors -->
-	<sign-up></sign-up>
-	<sign-in></sign-in>
-	<!-- Navbar -->
+<!-- Selectors -->
+<sign-up></sign-up>
+<sign-in></sign-in>
+<!-- Navbar -->
 	<nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
 		<a class="navbar-brand" href="#">Tux</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -13,11 +13,11 @@
 				<li class="nav-item">
 					<a class="nav-link" href="#">Company</a>
 				</li>
-				<li class="nav-item px-2">
-					<a href="#" data-toggle="modal" data-target="#join">Signup</a>
+				<li class="nav-item">
+					<a class="nav-link" href="#" data-toggle="modal" data-target="#join">Signup</a>
 				</li>
-				<li class="nav-item px-2">
-					<a href="#" data-toggle="modal" data-target="#login">Login</a>
+				<li class="nav-item">
+					<a class="nav-link" href="#" data-toggle="modal" data-target="#login">Login</a>
 				</li>
 			</ul>
 		</div>
@@ -27,66 +27,62 @@
 		<div class="container">
 			<h1 class="display-3">Tux</h1>
 			<p class="lead">Modern Management for the Modern Man</p>
-			<!--<p>There is enough to manage during your wedding, let us take care of your groomsman's outfits</p>-->
 		</div>
 	</div>
 	<!-- How It Works -->
-	<div class="container-fluid m-4 about">
+	<div class="container-fluid m-3">
 		<div class="row">
-			<div class="col-md-12 align-self-center">
-				<h2 class="section-title">ONE STOP SHOP</h2>
-				<p>We handle every part of the process all you need to do is create your event, and choose your tux shop and add your groomsmen's details.</p>
-				<p>We can the emails, send reminders and get your groomsman information to the store without any work for you so you can focus on other duties.</p>
-				<p>And believe it or not this is complete free (probably the only thing during your wedding that will be)</p>
-				<button type="button" class="btn btn-outline-primary">Sign-Up</button>
+			<div class="col-md-6 p-4 align-middle">
+				<h2 class="section-title">Hassle-free wedding rentals</h2>
+				<p class="text-secondary">We handle every part of the process all you need to do is create your wedding, and choose your tux shop and
+					add your groomsmen's name and email.</p>
+				<p class="text-secondary">We send reminders and get your groomsman information to the store without any work for
+					you so you can focus on other duties.</p>
+				<p class="text-secondary">And believe it or not this is complete free (probably the only thing during your wedding that will
+					be)</p>
+				<a class="call-to-action" href="#" data-toggle="modal" data-target="#join">GET STARTED</a>
+			</div>
+			<div class="col-md-6 p-4 justify-content-center">
+				<img class="image-landing" src="https://dl.dropboxusercontent.com/s/ccbe6rnfspx90bs/computer.jpg?dl=0" alt="computer">
 			</div>
 		</div>
 	</div>
 	<!-- The Process -->
-	<div class="container p-4">
+	<div class="container-fluid m-3 even">
+		<h5 class="section-title">What You Get</h5>
 		<div class="row">
-			<div class="col-md-6">
-				<h2 class="section-title">YOUR JOB..the easy part</h2>
-				<div>
-					<h4 class="mb-0"><span class="step">01</span> Sign-Up</h4>
+			<div class="col-md-4 align-content-center">
+				<i class="fa fa-id-card-o" aria-hidden="true"></i>
+					<h4 class="mb-0">Electronic Cards</h4>
 					<p class="step-detail mt-0">Provide your name and email as well as your a few wedding details.</p>
 				</div>
-				<div>
-					<h4 class="mb-0"><span class="step">02</span> Choose Your Store</h4>
-					<p class="step-detail mt-0">It is as easy as looking up your store by name, location, email or phone.</p>
+			<div class="col-md-4 align-content-center">
+					<i class="fa fa-sitemap" aria-hidden="true"></i>
+					<h4 class="mb-0">Management Dashboard</h4>
+					<p class="step-detail mt-0">Quickly & Easily see wh has submitted their measurements</p>
 				</div>
-
-				<div>
-					<h4 class="mb-0"><span class="step">03</span> Add Your Groomsman Detail</h4>
+			<div class="col-md-4 align-content-center">
+					<i class="fa fa-comments-o" aria-hidden="true"></i>
+					<h4 class="mb-0">Automated Notifications</h4>
 					<p class="step-detail  mt-0">All we ask for is there name and email to get them started</p>
 				</div>
 			</div>
-			<div class="col-md-6 landing-image">
-				<img src="#" alt="computer image" id="computer image">
-			</div>
+	</div>
+<!-- Your Job -->
+<div class="container-fluid m-3">
+	<div class="row">
+		<div class="col-md-6 p-4">
+			<h3 class="text-align-center">Your Job</h3>
+			<p class="text-secondary"><span class="numbers num-01">01</span> Sign up</p>
+			<p class="text-secondary"><span class="numbers num-02">02</span> Choose Your Tux Shop</p>
+			<p class="text-secondary"><span class="numbers num-03">03</span> Give Us A Few Wedding Details</p>
+			<p class="text-secondary"><span class="numbers num-04">04</span> Add Your Groomsman's name, email and (only if you want) their phone number</p>
 		</div>
-		<div class="row">
-			<div class="col-md-6">
-				<img src="#" alt="phone image" id="phone image">
-			</div>
-			<div class="col-md-6">
-				<h2 class="section-title">OUR JOB...the hard part</h2>
-				<div>
-					<h4><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Notifications</h4>
-					<p>We will email and text (if we have phone numbers) reminders weekly until your groomsman get their information in.</p>
-				</div>
-				<div>
-					<h4><i class="fa fa-hand-pointer-o" aria-hidden="true"></i> Information</h4>
-					<p>It is as easy as looking up your store by name, location, email or phone.</p>
-				</div>
-				<div>
-					<h4><i class="fa fa-user-plus" aria-hidden="true"></i></h4>
-					<p>All we ask for is there name and email to get them started</p>
-				</div>
-			</div>
+		<div class="col-md-6 p-4 justify-content-center">
+			<img class="image-landing" src="https://dl.dropboxusercontent.com/s/ccbe6rnfspx90bs/computer.jpg?dl=0" alt="computer">
 		</div>
 	</div>
-
+</div>
 	<!-- Testimonials -->
 	<div class="container-fluid m-0 p-4" id="testimonials">
 		<h3 class="p-4 text-center">Don't Believe Us, Believe These Trustworthy Guys</h3>
