styling of landing page

--- a/public_html/templates/landing-page.html
+++ b/public_html/templates/landing-page.html
@@ -48,23 +48,23 @@
 		</div>
 	</div>
 	<!-- The Process -->
-	<div class="container-fluid m-3 even">
-		<h5 class="section-title">What You Get</h5>
+	<div class="container-fluid m-3 p-3 even">
+		<h5 class="section-title text-center">What You Get</h5>
 		<div class="row">
-			<div class="col-md-4 align-content-center">
-				<i class="fa fa-id-card-o" aria-hidden="true"></i>
-					<h4 class="mb-0">Electronic Cards</h4>
-					<p class="step-detail mt-0">Provide your name and email as well as your a few wedding details.</p>
+			<div class="col-md-4 justify-content-center">
+				<i class="fa fa-id-card-o fa-3x" aria-hidden="true"></i>
+					<h4 class="mb-0 text-center">Electronic Cards</h4>
+					<p class="step-detail mt-0 text-center">Provide your name and email as well as your a few wedding details.</p>
 				</div>
-			<div class="col-md-4 align-content-center">
-					<i class="fa fa-sitemap" aria-hidden="true"></i>
-					<h4 class="mb-0">Management Dashboard</h4>
-					<p class="step-detail mt-0">Quickly & Easily see wh has submitted their measurements</p>
+			<div class="col-md-4 justify-content-center">
+					<i class="fa fa-sitemap fa-3x" aria-hidden="true"></i>
+					<h4 class="mb-0 text-center">Management Dashboard</h4>
+					<p class="step-detail mt-0 text-center">Quickly & Easily see wh has submitted their measurements</p>
 				</div>
-			<div class="col-md-4 align-content-center">
-					<i class="fa fa-comments-o" aria-hidden="true"></i>
-					<h4 class="mb-0">Automated Notifications</h4>
-					<p class="step-detail  mt-0">All we ask for is there name and email to get them started</p>
+			<div class="col-md-4 justify-content-center">
+					<i class="fa fa-comments-o fa-3x" aria-hidden="true"></i>
+					<h4 class="mb-0 text-center">Automated Notifications</h4>
+					<p class="step-detail  mt-0 text-center">All we ask for is there name and email to get them started</p>
 				</div>
 			</div>
 	</div>
@@ -79,12 +79,27 @@
 			<p class="text-secondary"><span class="numbers num-04">04</span> Add Your Groomsman's name, email and (only if you want) their phone number</p>
 		</div>
 		<div class="col-md-6 p-4 justify-content-center">
-			<img class="image-landing" src="https://dl.dropboxusercontent.com/s/ccbe6rnfspx90bs/computer.jpg?dl=0" alt="computer">
+			<img class="image-landing" src="https://dl.dropboxusercontent.com/s/3zzi8dbqv3lkngw/IMG_2385.JPG.jpeg?dl=0" alt="wedding">
+		</div>
+	</div>
+</div>
+<!-- Our Job -->
+<div class="container-fluid m-3">
+	<div class="row">
+		<div class="col-md-6 p-4 justify-content-center">
+			<img class="image-landing" src="https://dl.dropboxusercontent.com/s/3zzi8dbqv3lkngw/IMG_2385.JPG.jpeg?dl=0" alt="wedding">
+		</div>
+		<div class="col-md-6 p-4">
+			<h3 class="text-align-center">Our Job</h3>
+			<p class="text-secondary"><span class="numbers num-01">01</span> Sign up</p>
+			<p class="text-secondary"><span class="numbers num-02">02</span> Choose Your Tux Shop</p>
+			<p class="text-secondary"><span class="numbers num-03">03</span> Give Us A Few Wedding Details</p>
+			<p class="text-secondary"><span class="numbers num-04">04</span> Add Your Groomsman's name, email and (only if you want) their phone number</p>
 		</div>
 	</div>
 </div>
 	<!-- Testimonials -->
-	<div class="container-fluid m-0 p-4" id="testimonials">
+	<div class="container-fluid m-0 p-4 even" id="testimonials">
 		<h3 class="p-4 text-center">Don't Believe Us, Believe These Trustworthy Guys</h3>
 		<div class="row">
 			<div class="col-md-4">
@@ -152,26 +167,11 @@
 	</div>
 	<!-- Footer -->
 	<footer class="container-fluid m-0 p-4 text-center">
-		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
-					<p>Interest in connecting another way, check out our online presence</p>
-				</div>
-			</div>
-			<div class="row" id="reach-out">
-				<div class="col-md-3"></div>
-				<div class="col-md-3">
-					<a href="#" target="_blank">EMAIL</a>
-				</div>
-				<div class="col-md-3">
-					<a href="#">FACEBOOK</a>
+				<div class="col-md-6">
+					<p>© 2017 Tux. All Rights Reserved</p>
 				</div>
 				<div class="col-md-3"></div>
+				<div class="col-md-3"></div>
 			</div>
-			<div class="row">
-				<div class="col-md-12">
-					<p>© 2017 Tux</p>
-				</div>
-			</div>
-		</div>
 	</footer>
