completed v1 of landing page

--- a/public_html/templates/landing-page.html
+++ b/public_html/templates/landing-page.html
@@ -26,14 +26,14 @@
 	<div class="jumbotron jumbotron-fluid" id="landing-page-jumbo">
 		<div class="container">
 			<h1 class="display-3">Tux</h1>
-			<p class="lead">Modern Management for the Modern Man</p>
+			<p class="lead">Managing Your Wedding Party's Measurements</p>
 		</div>
 	</div>
 	<!-- How It Works -->
 	<div class="container-fluid m-3">
 		<div class="row">
-			<div class="col-md-6 p-4 align-middle">
-				<h2 class="section-title">Hassle-free wedding rentals</h2>
+			<div class="col-md-6 p-4 my-auto">
+				<h2 class="section-title">Hassle-free measurement management</h2>
 				<p class="text-secondary">We handle every part of the process all you need to do is create your wedding, and choose your tux shop and
 					add your groomsmen's name and email.</p>
 				<p class="text-secondary">We send reminders and get your groomsman information to the store without any work for
@@ -48,37 +48,58 @@
 		</div>
 	</div>
 	<!-- The Process -->
-	<div class="container-fluid m-3 p-3 even">
+	<div class="container-fluid my-3 p-3 even">
 		<h5 class="section-title text-center">What You Get</h5>
 		<div class="row">
-			<div class="col-md-4 justify-content-center">
-				<i class="fa fa-id-card-o fa-3x" aria-hidden="true"></i>
-					<h4 class="mb-0 text-center">Electronic Cards</h4>
-					<p class="step-detail mt-0 text-center">Provide your name and email as well as your a few wedding details.</p>
+			<div class="col-md-4 p-4">
+				<div class="card mx-auto" style="width: 25rem;">
+					<img class="card-img-top" src="http://www.varanitux.com/images/measurement-card.png" alt="Measurement Card">
+					<div class="card-body">
+						<h5 class="card-title text-center">Electronic Cards</h5>
+						<p class="card-text text-center">No more scanning, emailing or having to take pictures of your measurement card. Your measurement are taken and submitted from your phone.</p>
+					</div>
+					<div class="card-footer">
+						<small class="text-muted text-center">Last updated 3 mins ago</small>
+					</div>
 				</div>
-			<div class="col-md-4 justify-content-center">
-					<i class="fa fa-sitemap fa-3x" aria-hidden="true"></i>
-					<h4 class="mb-0 text-center">Management Dashboard</h4>
-					<p class="step-detail mt-0 text-center">Quickly & Easily see wh has submitted their measurements</p>
+			</div>
+			<div class="col-md-4 p-4">
+				<div class="card mx-auto" style="width: 25rem;">
+					<img class="card-img-top" src="https://docs.microsoft.com/en-us/power-bi/media/service-dashboards/power-bi-dashboard2.png" alt="Measurement Card">
+					<div class="card-body">
+						<h5 class="card-title text-center">Management Dashboard</h5>
+						<p class="card-text text-center">We give you the ability to get a snapshot of who has submitted their measurements and ensure your store has reviewed them</p>
+					</div>
+					<div class="card-footer">
+						<small class="text-muted text-center">Last updated 3 mins ago</small>
+					</div>
 				</div>
-			<div class="col-md-4 justify-content-center">
-					<i class="fa fa-comments-o fa-3x" aria-hidden="true"></i>
-					<h4 class="mb-0 text-center">Automated Notifications</h4>
-					<p class="step-detail  mt-0 text-center">All we ask for is there name and email to get them started</p>
+			</div>
+			<div class="col-md-4 p-4">
+				<div class="card mx-auto" style="width: 25rem;">
+					<img class="card-img-top" src="https://www.searchcandy.uk/wp-content/uploads/2016/06/notification-opt.png" alt="Measurement Card">
+					<div class="card-body">
+						<h5 class="card-title text-center">Automated Notifications</h5>
+						<p class="card-text text-center">We send reminders and confirmations to all parties involved as we work to make sure nothing is missed.</p>
+					</div>
+					<div class="card-footer">
+						<small class="text-muted text-center">Last updated 3 mins ago</small>
+					</div>
 				</div>
+			</div>
 			</div>
 	</div>
 <!-- Your Job -->
 <div class="container-fluid m-3">
 	<div class="row">
-		<div class="col-md-6 p-4">
-			<h3 class="text-align-center">Your Job</h3>
-			<p class="text-secondary"><span class="numbers num-01">01</span> Sign up</p>
-			<p class="text-secondary"><span class="numbers num-02">02</span> Choose Your Tux Shop</p>
-			<p class="text-secondary"><span class="numbers num-03">03</span> Give Us A Few Wedding Details</p>
-			<p class="text-secondary"><span class="numbers num-04">04</span> Add Your Groomsman's name, email and (only if you want) their phone number</p>
-		</div>
-		<div class="col-md-6 p-4 justify-content-center">
+			<div class="col-md-6 p-4 my-auto">
+				<h2 class="section-title">Your job, it is really simple...</h2>
+				<p class="text-secondary">We work with tons of wedding rental shops across the country to provide you the a stress free experience.</p>
+				<p class="text-secondary">All we ask from you is that you sign up, choose your store, provide a few wedding details and add your groomsman information.</p>
+				<p class="text-secondary">We take care of the rest.</p>
+				<a class="call-to-action" href="#" data-toggle="modal" data-target="#join">GET STARTED</a>
+			</div>
+		<div class="col-md-6 p-4 mx-auto">
 			<img class="image-landing" src="https://dl.dropboxusercontent.com/s/3zzi8dbqv3lkngw/IMG_2385.JPG.jpeg?dl=0" alt="wedding">
 		</div>
 	</div>
@@ -86,15 +107,13 @@
 <!-- Our Job -->
 <div class="container-fluid m-3">
 	<div class="row">
-		<div class="col-md-6 p-4 justify-content-center">
-			<img class="image-landing" src="https://dl.dropboxusercontent.com/s/3zzi8dbqv3lkngw/IMG_2385.JPG.jpeg?dl=0" alt="wedding">
+		<div class="col-md-6 p-4 mx-auto">
+			<img class="image-landing" src="https://dl.dropboxusercontent.com/s/9kh3bb4q4nj5zd7/edho-pratama-149011.jpg?dl=0" alt="wedding">
 		</div>
-		<div class="col-md-6 p-4">
-			<h3 class="text-align-center">Our Job</h3>
-			<p class="text-secondary"><span class="numbers num-01">01</span> Sign up</p>
-			<p class="text-secondary"><span class="numbers num-02">02</span> Choose Your Tux Shop</p>
-			<p class="text-secondary"><span class="numbers num-03">03</span> Give Us A Few Wedding Details</p>
-			<p class="text-secondary"><span class="numbers num-04">04</span> Add Your Groomsman's name, email and (only if you want) their phone number</p>
+		<div class="col-md-6 p-4 my-auto">
+			<h2 class="section-title">Our job, pretty much the rest...</h2>
+			<p class="text-secondary">Once we have all your wedding and groomsman information, we do everything but make your wedding party get their measurements. We send notifications to the store you choose when cards are submitted, reminders to your wedding party and updates to you so you know exactly what is happening.</p>
+			<a class="call-to-action" href="#" data-toggle="modal" data-target="#join">GET STARTED</a>
 		</div>
 	</div>
 </div>
@@ -156,22 +175,25 @@
 	<div class="container-fluid m-4 p-4 text-center">
 		<div class="row">
 			<div class="col-md-12">
-				<h3>Why All The Hype?</h3>
-				<p>Are you a store curious to learn about the hype?</p>
-				<p>TuxName is making the process of managing rentals even easier for you.</p>
-				<p>We are always looking to add new, check out our Company page for more details about how it works for
+				<h2 class="section-title">Why All The Hype?</h2>
+				<p class="text-secondary">Are you a store curious to learn about the hype?</p>
+				<p class="text-secondary">TuxName is making the process of managing rentals even easier for you.</p>
+				<p class="text-secondary">We are always looking to add new, check out our Company page for more details about how it works for
 					your business.</p>
-				<button type="button" class="btn btn-outline-primary">Check Out the Company Page</button>
+				<button type="button" class="btn btn-outline-primary">Learn More</button>
 			</div>
 		</div>
 	</div>
 	<!-- Footer -->
-	<footer class="container-fluid m-0 p-4 text-center">
+	<footer class="container-fluid m-0 p-4 even">
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-md-6 text-left my-auto">
 					<p>© 2017 Tux. All Rights Reserved</p>
 				</div>
 				<div class="col-md-3"></div>
-				<div class="col-md-3"></div>
+				<div class="col-md-3 mr-auto">
+					<i class="fa fa-facebook-square fa-3x p-2" aria-hidden="true"></i>
+					<i class="fa fa-linkedin-square fa-3x p-2" aria-hidden="true"></i>
+				</div>
 			</div>
 	</footer>
