--- a/public_html/templates/home.html
+++ b/public_html/templates/home.html
@@ -1,26 +1,28 @@
 <!-- Selectors -->
 <navigation-top></navigation-top>
 <create-wedding></create-wedding>
-<section>
+<section class="m-3">
 	<h1 class="mb-3">Weddings</h1>
 	<p>Welcome to Tux, to get started just select create wedding and add your groomsman contact information.</p>
-	<a href="#" data-toggle="modal" data-target="#createWedding">Create Wedding</a>
-	<table class="table justify-content-center table-striped table-bordered table-hover">
-		<tr>
-			<th>Number</th>
-			<th>Name</th>
-			<th>Wedding Date</th>
-			<th>Return By Date</th>
-			<th>Card Received</th>
-			<th>Status</th>
-		</tr>
-		<tr>
-			<th>1</th>
-			<th>Zach</th>
-			<th>9/23/17</th>
-			<th>9/1/17</th>
-			<th>3 of 6 (50%)</th>
-			<th>Need Review</th>
-		</tr>
-	</table>
+	<a href="#" data-toggle="modal" data-target="#createWedding" class="create-button mb-3">Create Wedding</a>
+		<table class="table text-center table-striped table-bordered table-hover mt-4">
+			<tr>
+				<th>Wedding Name</th>
+				<th>Wedding Date</th>
+				<th>Return Card By Date</th>
+				<th>Card Received</th>
+				<th>Status</th>
+				<th>Edit</th>
+				<th>Review</th>
+			</tr>
+			<tr>
+				<td>Zach Spangler & Mallory Markham</td>
+				<td>9/23/17</td>
+				<td>9/1/17</td>
+				<td>3 of 6 (50%)</td>
+				<td>Needs Review</td>
+				<td><i class="fa fa-pencil-square-o" aria-hidden="true"></i></td>
+				<td><i class="fa fa-search" aria-hidden="true"></i></td>
+			</tr>
+		</table>
 </section>
