--- a/public_html/templates/wedding-detail.html
+++ b/public_html/templates/wedding-detail.html
@@ -1,20 +1,19 @@
 <!-- Selectors -->
 <navigation-top></navigation-top>
 
-<section>
+<section class="m-3">
 	<h1 class="mb-3">Weddings Details</h1>
-	<h5 class="m-2">Wedding Name:</h5>
-	<h5 class="m-2">Wedding Party Admin:</h5>
-	<h5 class="m-2">Return By Date:</h5>
-	<h5 class="m-2">Wedding Date:</h5>
-	<h5 class="m-2">Store:</h5>
-	<button class="m-4">Add Groomsman</button>
-	<table class="table justify-content-center table-striped table-bordered table-hover">
+	<h6 class="m-2">Wedding Name:</h6>
+	<h6 class="m-2">Wedding Party Admin:</h6>
+	<h6 class="m-2">Return By Date:</h6>
+	<h6 class="m-2">Wedding Date:</h6>
+	<h6 class="m-2">Store:</h6>
+	<a href="#" data-toggle="modal" data-target="#createWedding" class="create-button my-4">Add A Groomsman</a>
+	<table class="table text-center table-striped table-bordered table-hover mt-4">
 		<tr>
 			<th>Name</th>
 			<th>Email</th>
 			<th>Phone</th>
-			<th>Account Created</th>
 			<th>Card Number</th>
 			<th>Card Submitted</th>
 			<th>Card Confirmed</th>
@@ -22,15 +21,13 @@
 			<th>Edit Details</th>
 		</tr>
 		<tr>
-			<td>Zach</td>
+			<td>Zach Spangler</td>
 			<td>zaspangler@gmail.com</td>
 			<td>505-555-5555</td>
-			<td>13433s</td>
 			<td>Yes</td>
 			<td>Yes</td>
 			<td>No</td>
 			<td>
-				<i class="fa fa-comment" aria-hidden="true"></i>
 				<i class="fa fa-envelope" aria-hidden="true"></i>
 			</td>
 			<td>
